<resources>
    <string name="app_name">crutkows-FeelsBook</string>
    <string name="love_button">Love</string>
    <string name="joy_button">Joy</string>
    <string name="surprise_button">Surprise</string>
    <string name="anger_button">Anger</string>
    <string name="sadness_button">Sadness</string>
    <string name="fear_button">Fear</string>
    <string name="input_hint">Comment (Optional)</string>
    <string name="zero">0</string>
    <string name="history">History</string>
    <string name="cancel_button">Delete</string>
    <string name="save_button">Save</string>
    <string name="comment">Comment</string>
    <string name="date">Date</string>
    <string name="main_activity_title">crutkows-FeelsBook</string>
    <string name="history_activity_title">History</string>
    <string name="edit_activity_title">Edit Emotion</string>
</resources>
